# playground_project

./: .gitignore  README.md  pyproject.toml
notebooks/: InspirationalDeveloperHelper.ipynb
scripts/: main.py  start_local_llm.sh
