[project]
name = "playground-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.4",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.0",
    "openai>=1.93.2",
    "pypdf>=5.7.0",
    "sentence-transformers>=5.0.0",
]
